nerv/main/cluster/apps/podinfo/app/basicauth.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: podinfo-basicauth
  namespace: apps
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: podinfo
  basicAuth:
    users:
      name: podinfo-basicauth
