nerv/main/cluster/apps/podinfo/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  parentRefs:
    - name: external
      namespace: networking-system
  hostnames:
    - pod.nerv.id
  rules:
    - backendRefs:
        - name: podinfo
          port: 9898
